--- a/assets/template-2/css/style.css
+++ b/assets/template-2/css/style.css
@@ -1,11 +1,29 @@
 /*Default style start*/
-.section-padding{
-    padding: 50px 0;
+body{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    line-height: 35px;
 }
 :root{
     --primary-color: #EE3333
 }
 /*Default style end*/
+
+/*common style start*/
+.section-title h1 {
+    text-transform: capitalize;
+    font-weight: 300;
+    border-bottom: 2px solid #ddd;
+    display: inline-block;
+    margin-bottom: 40px;
+    color: gray;
+    font-size: 35px;
+}
+.section-padding{
+    padding: 50px 0;
+}
+/*common style end*/
+
 /*header style start*/
 .header-area {
     position: absolute;
@@ -179,5 +197,231 @@
 /*promotions area end*/
 
 /*featured area start*/
+.single-feat-product {
+    padding: 15px;
+    transition: all .5s;
+}
 
+.product-thumb {
+    overflow: hidden;
+    position: relative;
+}
+
+.notice {
+    position: absolute;
+    top: 0;
+    right: -70px;
+    transition: all.5s;
+}
+.single-feat-product:hover .notice{
+    right: 0;
+    transition: all.5s;
+    transition-delay: .5s;
+}
+.notice p {
+    margin: 0;
+    background: var(--primary-color);
+    color: #fff;
+    padding: 2px 10px;
+    border-radius: 30px;
+}
+
+.product-rating ul li {
+    display: inline-block;
+    font-size: 18px;
+    color: #999;
+    cursor: pointer;
+    text-transform: capitalize;
+}
+.product-rating ul li.rated{
+    color: var(--primary-color);
+}
+.product-title h4 {
+    text-transform: capitalize;
+    margin: 0;
+    padding: 4px 0;
+    font-size: 15px;
+    color: gray;
+    font-weight: 300;
+}
+
+.add-to-cart-btn p {
+    margin: 0;
+    background: var(--primary-color);
+    color: #fff;
+    text-transform: capitalize;
+    padding: 5px 20px;
+    cursor: pointer;
+    border-radius: 30px;
+}
+
+.add-to-cart-btn {
+    display: inline-block;
+}
+
+.add-to-cart-btn p i.fa {
+    margin-right: 5px;
+    font-size: 18px;
+}
+
+.buy-option {
+    position: relative;
+    overflow: hidden;
+    margin-top: 15px;
+}
+
+.wishlist {
+    position: absolute;
+    left: 25%;
+    top: 50%;
+    transform: translate(-25%, -50%);
+    transition: all .5s;
+    cursor: pointer;
+    z-index: -1;
+}
+
+.compare {
+    position: absolute;
+    right: 25%;
+    top: 50%;
+    transform: translate(-25%, -50%);
+    transition: all .5s;
+    cursor: pointer;
+    z-index: -1;
+}
+
+.single-feat-product:hover {
+    box-shadow: 0 -20px 50px #C8D6E5;
+    transition: all .5s;
+}
+
+.single-feat-product:hover .wishlist {
+    left: 13%;
+    font-size: 20px;
+    color: var(--primary-color);;
+    z-index: 1;
+}
+.single-feat-product:hover .compare {
+    right: 8%;
+    font-size: 20px;
+    color: var(--primary-color);;
+    z-index: 1;
+}
+.quick-view-btn {
+    position: absolute;
+    left: 0;
+    top: -20px;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    transform: translate(0, -50%);
+    transition: all .5s;
+}
+.single-feat-product:hover .quick-view-btn{
+    top: 50%;
+    transition: all .5s;
+}
+.quick-view-btn a {
+    background: var(--primary-color);
+    color: #fff;
+    text-transform: capitalize;
+    padding: 6px 15px;
+    font-weight: 300;
+    border-radius: 30px;
+}
+
+.quick-view-btn a i.fa {
+    margin-right: 7px;
+    font-size: 22px;
+}
+.product-price p {
+    font-size: 22px;
+    margin: 0;
+    padding: 5px 0;
+    text-transform: capitalize;
+    color: #000;
+}
+
+.product-price p del {
+    color: #999;
+    font-weight: 300;
+    margin-right: 15px;
+}
+
+.product-price p span {
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+/*quick view modal*/
+.modal-dialog {
+    margin: 60px auto;
+}
+button.close-popup {
+    cursor: pointer;
+    border: initial;
+    font-size: 38px;
+    color: #fff;
+    background: var(--primary-color);
+    display: inline-block;
+    padding: 10px 0;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+.product-details .product-title h4 {
+    font-weight: 700;
+    font-size: 18px;
+}
+.availability p {
+    margin: 0;
+    padding: 15px 0;
+    font-weight: 600;
+    color: #000;
+}
+.quantity {
+    margin-top: 10px;
+}
+.minus {
+    width: 30px;
+    float: left;
+    background: var(--primary-color);
+    text-align: center;
+    padding: 5px 0;
+    color: #fff;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    cursor: pointer;
+}
+
+.number-show {
+    width: 48%;
+    float: left;
+}
+
+.plus {
+    width: 30px;
+    float: left;
+    background: var(--primary-color);
+    text-align: center;
+    padding: 5px 0px;
+    color: #fff;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+}
+
+input.item_count {
+    padding: 0;
+    text-align: center;
+    border-radius: initial
+}
+
+input.item_count:focus {
+    border: 1px solid #ddd;
+    box-shadow: initial;
+}
+
+.item-counter {
+    overflow: hidden;
+}
 /*featured area end*/
