--- a/assets/template-2/css/style.css
+++ b/assets/template-2/css/style.css
@@ -352,22 +352,69 @@ body{
     color: var(--primary-color);
     font-weight: 700;
 }
-
-/*quick view modal*/
-.modal-dialog {
-    margin: 60px auto;
-}
-button.close-popup {
-    cursor: pointer;
-    border: initial;
-    font-size: 38px;
-    color: #fff;
+.new-arrival{
+    position: absolute;
+    left: -27px;
+    top: 24px;
     background: var(--primary-color);
-    display: inline-block;
-    padding: 10px 0;
+    padding: 0 25px;
+    transform: rotateZ(-45deg);
+
+}
+.new-arrival p{
+    margin: 0;
     text-transform: capitalize;
+    color: #ffffff;
+}
+/*quick view modal*/
+.white-block{
+    position: relative;
+    background: #ffffff;
+    padding: 80px 50px;
+    margin: 0 100px;
+}
+a.popup-modal-dismiss {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    background: var(--primary-color);
+    color: #fff;
+    font-size: 25px;
     font-weight: 300;
 }
+
+.buy-option.quick-popup-buy .wishlist{
+    left: 15%;
+    color: var(--primary-color);
+    z-index: initial;
+}
+.buy-option.quick-popup-buy .compare{
+    right: 15%;
+    color: var(--primary-color);
+    z-index: initial;
+}
+.popup-product-slier .owl-dots {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(0, -50%)
+}
+.popup-product-slier .owl-dot span {
+    width: 15px;
+    height: 15px;
+    border: 1px solid var(--primary-color);
+    display: block;
+    border-radius: 50%;
+    margin: 5px;
+}
+.popup-product-slier .owl-dot.active span {
+    background: var(--primary-color);
+}
+
 .product-details .product-title h4 {
     font-weight: 700;
     font-size: 18px;
