--- a/assets/template-2/css/responsive.css
+++ b/assets/template-2/css/responsive.css
@@ -232,4 +232,47 @@
 
 /*Wide Mobile Layout: 480px*/
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+    .promo-cont:after {
+        top: -126px;
+        height: 150%;
+        width: 140%;
+        left: -60px;
+    }
+
+    .new-arrival {
+        width: 65%;
+    }
+
+    .wishlist {
+        left: 8px;
+        color: var(--primary-color);
+    }
+
+    .compare {
+        right: 0;
+        color: var(--primary-color);
+    }
+
+    .product-title h4 {
+        font-size: 18px;
+    }
+
+    .post-meta ul li {
+        font-size: 12px;
+        padding: 0;
+    }
+
+    .post-meta ul li i.fa {
+        font-size: 13px;
+        margin: initial;
+    }
+
+    .post-title h3 {
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    .post-excerpt p {
+        font-size: 16px;
+    }
 }
