--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,7 +754,40 @@ span.item-count:after {
   font-size: 14px;
   margin: 0;
 }
+/* Section Button*/
+.view-btn{
+  float: right;
+  background: white;
+  padding: 4px 6px;
+  font-weight: 600;
+  border: 1px solid #ee3333;
+  color: #ee3333;
+}
+.view-btn:hover{
+  background-color: #ee3333;
+  color: white;
+  border: none;
+}
+
 /* single product */
+
+.product-overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 0;
+  background: #000;
+  opacity: .5;
+  transition: all .5s;
+}
+.single-product:hover .product-overlay{
+  height: 100%;
+  transition: all .5s;
+}
+.single-product{
+  border: 1px solid #ee3333;
+}
 .product-img img {
   width: 100%;
 }
@@ -853,12 +886,30 @@ span.item-count:after {
   padding-bottom: 5px;
   position: relative;
   text-align: center;
-  padding: 12px 0;
   border: 1px solid #ee3333;
   margin-top: 10px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   background: #ee3333;
+}
+.product-category a {
+  color: #fff;
+  font-size: 18px;
+  display: block;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.product-category a i.ion-bag {
+  margin-right: 0;
+  visibility: hidden;
+  transition: all .5s;
+}
+
+.single-product:hover .product-category a i.ion-bag {
+  visibility: visible;
+  margin-right: 10px;
+  transition: all .5s;
 }
 .shop-product-content {
   margin: 0 10px;
@@ -4898,17 +4949,3 @@ input#newsletter-permission {
   text-transform: uppercase;
   font-size: 35px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
