works(active menu style, menu sticky, remove left menu bar, change blog button style, design breadcrumb, about page style, contact map style)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ span.item-count:after {
   width: initial;
 }
 .cur-lang-acc-dropdown li:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 .cur-lang-acc-dropdown ul li a {
   text-transform: capitalize;
