--- a/assets/template-2/css/style.css
+++ b/assets/template-2/css/style.css
@@ -74,15 +74,27 @@ img {
     display: inline-block;
     text-transform: uppercase;
     font-size: 22px;
-    padding: 20px 0;
+    padding: 20px 5px;
     color: var(--primary-color);
     font-style: italic;
 }
-
+.breadcrumbs ul li a{
+    color: #ffffff;
+}
 .breadcrumb-area {
+    position: relative;
+    height: 250px;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+}
+.breadcrumbs h1 {
+    color: #fff;
+    text-transform: capitalize;
+}
+
+.breadcrumbs {
+    margin-top: 60px;
 }
 /*breadcrumb area end*/
 /*
